--- a/WEBSITE/Index.html
+++ b/WEBSITE/Index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
         (function() {
-            emailjs.init("VXB_UyVqt4pHwMfYx"); // Your EmailJS public key
+            emailjs.init("VXB_UyVqt4pHwMfYx"); // public key
         })();
     </script>
 </head>
