--- a/timeline.html
+++ b/timeline.html
@@ -38,7 +38,7 @@
                 
                     <li>
                         <div class="image-content">
-                            <img src="C:/Webbutveckling/Webbsida/Images/Paul%20Baran.jfif"alt="Paul Baran"width="175">
+                            <img src="C:\Users\karim.zuetar\Documents\GitHub\Karim.github.io\Images\Paul Baran.jfif"alt="Paul Baran"width="175">
                         </div>
                         Paul Baran - Pioneer of Distributed Networks
                     </li>
